[project]
name = "wikibot"
version = "1.0.0"
description = "WikiBot - a regex-driven Wikipedia chatbot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "prompt-toolkit>=3.0.52",
    "rapidfuzz>=3.9.0",
    "requests>=2.32.0",
    "rich>=14.0.0",
    "sentence-transformers>=3.0.0",
    "spacy>=3.7.0",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that hit the live Wikipedia API (skipped if offline)",
]
